# xcp-ng-vdi-stream

./: .gitignore  CMakeLists.txt  README.md  dune-project  xcp-ng-vdi-stream.opam  xcp_ng_vdi_stream.opam
bindings/ocaml/: .gitignore  CMakeLists.txt  dune  opam-build.sh  xcp_ng_vdi_stream.ml  xcp_ng_vdi_stream.mli  xcp_ng_vdi_stream_stubs.c
bindings/ocaml/cmake/: BundleStaticLibrary.cmake  FindOCaml.cmake
config/: XcpNgVdiStreamConfig.cmake.in
include/xcp-ng/: vdi-stream.h
src/: error.c  error.h  global.c  global.h  vdi-driver.c  vdi-driver.h  vdi-stream-p.h  vdi-stream.c
src/image-format/: qcow2.c  qcow2.h
src/stream/: qcow2-stream.c
tests/: CMakeLists.txt  check-qcow2-export
tests/images/: 1.qcow2  10.qcow2  11.qcow2  12.qcow2  2.qcow2  3.qcow2  4.qcow2  5.qcow2  6.qcow2  7.qcow2  8.qcow2  9.qcow2
tools/: CMakeLists.txt  dump-info.c  stream-to-file.c
